fix(size): prevent wrapping

--- a/src/components/base/visualizing/size/size.scss
+++ b/src/components/base/visualizing/size/size.scss
@@ -2,6 +2,7 @@
 
 .size {
   color: $decoration;
+  white-space: nowrap;
 
   &::before {
     display: inline-block;
